# stampy

./: .gitmodules  .travis.yml  README.md  stampy.cabal  stampy.lock-7.10.3
main/: stampy.hs
src/: Stampy.hs
src/Stampy/: Data.hs
src/Stampy/Data/: Error.hs
src/Stampy/Web/: Route.hs
static/: jquery.console.js
