name:                  stampy
version:               0.1.0.0
synopsis:              Hokey flashcard thing
homepage:              https://github.com/thumphries/stampy
license:               AllRightsReserved
license-file:          LICENSE
author:                Tim Humphries
maintainer:            tim@utf8.me
category:              Web
build-type:            Simple
cabal-version:         >=1.10
extra-source-files:    static/jquery.console.js

library

  default-language:    Haskell2010

  hs-source-dirs:      src

  exposed-modules:
                       Stampy

                       Stampy.Data
                       Stampy.Data.Error

                       Stampy.Web.Route

  other-modules:

  build-depends:       base >= 4.8             && <4.9
                     , airship == 0.6.*
                     , ambiata-p
                     , ambiata-x-eithert
                     , mtl == 2.2.*
                     , text
                     , transformers == 0.4.*
                     , wai == 3.2.*


executable stampy

  default-language:    Haskell2010

  hs-source-dirs:      main

  main-is:             Main.hs

  build-depends:       base >=4.8              && <4.9
                     , stampy
                     , warp == 3.2.*
